--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mspretro-api",
   "version": "1.0.0",
-  "description": "The API for the MSPRetro",
+  "description": "The API of MSPRetro",
   "main": "mspretro.js",
   "scripts": {
     "start": "node mspretro.js"
@@ -9,16 +9,18 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "body-parser-xml": "^2.0.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "generate-password": "^1.7.0",
-    "locale-currency": "^0.0.2",
     "mongoose": "^6.3.5",
-    "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.5",
+    "xml2js": "^0.4.23",
+    "node-fetch": "^2.6.7",
     "stripe": "^11.7.0",
-    "xml2js": "^0.4.23"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "ws": "^8.11.0",
+    "locale-currency": "^0.0.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "engines": {
     "node": "16.x"
