--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.3",
     "ws": "^8.11.0",
     "locale-currency": "^0.0.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "@azure/storage-blob": "^12.14.0"
   },
   "engines": {
     "node": "16.x"
