--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "express": "^4.18.1",
     "generate-password": "^1.7.0",
     "mongoose": "^6.3.5",
-    "nodemailer": "^6.7.5",
     "xml2js": "^0.4.23",
     "node-fetch": "^2.6.7",
     "stripe": "^11.7.0",
@@ -21,7 +20,8 @@
     "ws": "^8.11.0",
     "locale-currency": "^0.0.2",
     "jsonwebtoken": "^9.0.0",
-    "@azure/storage-blob": "^12.14.0"
+    "@azure/storage-blob": "^12.14.0",
+    "@azure/communication-email": "^1.0.0"
   },
   "engines": {
     "node": "16.x"
