--- a/.github/workflows/main_mspretro-api(staging).yml
+++ b/.github/workflows/main_mspretro-api(staging).yml
@@ -21,6 +21,14 @@ jobs:
         with:
           node-version: '18.x'
 
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: npm install, build, and test
         run: |
           npm install
