--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"mongoose": "^8.4.3",
 		"node-fetch": "^2.7.0",
 		"stripe": "^16.0.0",
-		"xml2js": "^0.6.2"
+		"xml2js": "^0.6.2",
+		"yup": "^1.6.1"
 	},
 	"engines": {
 		"node": "20.x"
